--- a/org.spotter.eclipse.ui/build.properties
+++ b/org.spotter.eclipse.ui/build.properties
@@ -19,7 +19,10 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               lib/org.spotter.client.assembly.jar,\
                DEPENDENCIES.txt,\
                LICENSE.txt,\
-               README.txt
+               README.txt,\
+               lib/org.spotter.client-1.0.1-SNAPSHOT-shaded.jar,\
+               lib/org.spotter.client-1.0.1-SNAPSHOT-sources.jar,\
+               lib/org.spotter.client-1.0.1-SNAPSHOT.jar
+jars.compile.order = .
