New version assembly.jar

--- a/org.spotter.eclipse.ui/build.properties
+++ b/org.spotter.eclipse.ui/build.properties
@@ -22,7 +22,5 @@ bin.includes = META-INF/,\
                DEPENDENCIES.txt,\
                LICENSE.txt,\
                README.txt,\
-               lib/org.spotter.client-1.0.1-SNAPSHOT-shaded.jar,\
-               lib/org.spotter.client-1.0.1-SNAPSHOT-sources.jar,\
-               lib/org.spotter.client-1.0.1-SNAPSHOT.jar
+               lib/org.spotter.client.assembly.jar
 jars.compile.order = .
