--- a/org.spotter.eclipse.ui/.classpath
+++ b/org.spotter.eclipse.ui/.classpath
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.spotter.client-1.0.1-SNAPSHOT-shaded.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.spotter.client-1.0.1-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.spotter.client-1.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.spotter.client.assembly.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
